<resources>
    <string name="app_name">Malligai</string>
    <string name="phoneno">Phone Number</string>
    <string name="cusname">Name</string>
    <string name="morder">Myorder</string>
    <string name="profile">Profile</string>
    <string name="Email">Email</string>
    <string name="ad1">Address-lane 1 </string>
    <string name="ad2">Adress-lane 2</string>
    <string name="pin">Pincode</string>
    <string name="Submit">Submit</string>
    <string name="update">Update</string>
    <string name="Logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
