<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_margin="15sp"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />


        <TextView android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_marginTop="15sp"
            android:layout_height="wrap_content"
            android:hint="@string/cusname" />


        <TextView android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/Email" />


        <TextView android:id="@+id/addresslane1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/ad1"/>

        <TextView android:id="@+id/addresslane2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/ad2"/>
        <TextView android:id="@+id/pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/pin"/>
        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:textColor="#fff"
            android:background="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/update"/>
        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:textColor="#fff"
            android:background="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/Logout"/>




    </LinearLayout>
</ScrollView>